syntax = "proto3";

message NegativeRequest {
    string in_img_path = 1;
    bool process_all_flag = 2;
    repeated string in_img_list = 3;
    string out_img_path = 4;
    bool is_preview_flag = 5;
    int32 par_st_row = 6;
    int32 par_en_row = 7;
    int32 par_st_col = 8;
    int32 par_en_col = 9;
    bool par_process_flag = 10;
}

message ThresholdRequest {
    string in_img_path = 1;
    bool process_all_flag = 2;
    repeated string in_img_list = 3;
    string out_img_path = 4;
    bool is_preview_flag = 5;
    string threshold_option = 6;
    float threshold_level = 7;
    int32 par_st_row = 8;
    int32 par_en_row = 9;
    int32 par_st_col = 10;
    int32 par_en_col = 11;
    bool par_process_flag = 12;
}

message AdaptiveThresholdRequest {
    string in_img_path = 1;
    bool process_all_flag = 2;
    repeated string in_img_list = 3;
    string out_img_path = 4;
    bool is_preview_flag = 5;
    string adaptive_threshold_option = 6;
    int32 ad_th_box_len = 7;
    int32 ad_th_edge_reducer = 8;
    int32 par_st_row = 9;
    int32 par_en_row = 10;
    int32 par_st_col = 11;
    int32 par_en_col = 12;
    bool par_process_flag = 13;
}

message LaplaceRequest {
    string in_img_path = 1;
    bool process_all_flag = 2;
    repeated string in_img_list = 3;
    string out_img_path = 4;
    bool is_preview_flag = 5;
    int32 in_kernal_size = 6;
    int32 par_st_row = 7;
    int32 par_en_row = 8;
    int32 par_st_col = 9;
    int32 par_en_col = 10;
    bool par_process_flag = 11;
}

message PrewittRequest {
    string in_img_path = 1;
    bool process_all_flag = 2;
    repeated string in_img_list = 3;
    string out_img_path = 4;
    bool is_preview_flag = 5;
    int32 par_st_row = 6;
    int32 par_en_row = 7;
    int32 par_st_col = 8;
    int32 par_en_col = 9;
    bool par_process_flag = 10;
}

message SobelRequest {
    string in_img_path = 1;
    bool process_all_flag = 2;
    repeated string in_img_list = 3;
    string out_img_path = 4;
    bool is_preview_flag = 5;
    int32 in_kernal_size = 6;
    int32 par_st_row = 7;
    int32 par_en_row = 8;
    int32 par_st_col = 9;
    int32 par_en_col = 10;
    bool par_process_flag = 11;
}

message ScharrRequest {
    string in_img_path = 1;
    bool process_all_flag = 2;
    repeated string in_img_list = 3;
    string out_img_path = 4;
    bool is_preview_flag = 5;
    int32 par_st_row = 6;
    int32 par_en_row = 7;
    int32 par_st_col = 8;
    int32 par_en_col = 9;
    bool par_process_flag = 10;
}

message CannyRequest {
    string in_img_path = 1;
    bool process_all_flag = 2;
    repeated string in_img_list = 3;
    string out_img_path = 4;
    bool is_preview_flag = 5;
    float in_rejection_upper_level = 6;
    float in_inclusion_lower_level = 7;
    int32 par_st_row = 8;
    int32 par_en_row = 9;
    int32 par_st_col = 10;
    int32 par_en_col = 11;
    bool par_process_flag = 12;
}

message Kernel2D {
    repeated int32 values = 1;  // List of integers representing a row
}

message LinearRequest {
    string in_img_path = 1;
    bool process_all_flag = 2;
    repeated string in_img_list = 3;
    string out_img_path = 4;
    bool is_preview_flag = 5;
    repeated int32 in_kernal_1 = 6;
    repeated Kernel2D in_kernal_2 = 7;
    string in_filter_display_mode = 8;
    string kernal_request_format = 9;
    int32 par_st_row = 10;
    int32 par_en_row = 11;
    int32 par_st_col = 12;
    int32 par_en_col = 13;
    bool par_process_flag = 14;
}

message BiLinearRequest {
    string in_img_path = 1;
    bool process_all_flag = 2;
    repeated string in_img_list = 3;
    string out_img_path = 4;
    bool is_preview_flag = 5;
    repeated int32 in_kernal_1 = 6;
    repeated Kernel2D in_kernal_2 = 7;
    int32 par_st_row = 8;
    int32 par_en_row = 9;
    int32 par_st_col = 10;
    int32 par_en_col = 11;
    bool par_process_flag = 12;
}

message ChannelSelectorRequest {
    string in_img_path = 1;
    bool process_all_flag = 2;
    repeated string in_img_list = 3;
    string out_img_path = 4;
    bool is_preview_flag = 5;
    string in_color_intensity_selection = 6;
    float in_mid_color_val = 7;
    float in_spread_color = 8;
    float in_manual_color_level = 9;
    int32 par_st_row = 10;
    int32 par_en_row = 11;
    int32 par_st_col = 12;
    int32 par_en_col = 13;
    bool par_process_flag = 14;
}

message Point {
    int32 row = 1;
    int32 col = 2;
}

message PointList {
    repeated Point points = 1;
}

message ChannelDemuxRequest {
    string in_img_path = 1;
    bool process_all_flag = 2;
    repeated string in_img_list = 3;
    string out_img_path = 4;
    bool is_preview_flag = 5;
    PointList in_select_dual_pt_rc_list = 6;
    Point in_bg_rc_pt = 7;
    bool in_filter_pass_true_block_false_flag = 8;
    float in_filter_power = 9;
    int32 par_st_row = 10;
    int32 par_en_row = 11;
    int32 par_st_col = 12;
    int32 par_en_col = 13;
    bool par_process_flag = 14;
}

message FourierRequest {
    string in_img_path = 1;
    bool process_all_flag = 2;
    repeated string in_img_list = 3;
    string out_img_path = 4;
    bool is_preview_flag = 5;
    float in_period_closeness = 6;
    float in_clarity_strength = 7;
    int32 par_st_row = 8;
    int32 par_en_row = 9;
    int32 par_st_col = 10;
    int32 par_en_col = 11;
    bool par_process_flag = 12;
}
